
                                    Hatari
                                   --------
                                Release Notes

 Development version
 -------------------

Emulation:
- Remove old ST Sound's code used for tone and noise step compute
- On STE, correctly shift display 8 pixels to the left when using
  224 bytes overscan

Emulator:
- Option to disable Falcon mic
  ("--mic off" is needed for Mudflap debugging)
- SDL GUI fileselector scrollbar can be used with mouse
- Atari program given as argument to Hatari will be automatically
  started after TOS boots. GEMDOS hard disk directory can now be
  give also as an argument, not just as a (-d) option
- Support for tracing AES calls.  VDI calls can now be traced
  also without using an extended VDI resolution
- BIOS CON: output is converted to ASCII and redirected to host console
  with the --bios-intercept option
- Debugger:
  - --bios-intercept can be toggled from debugger (not just enabled)
  - BIOS/XBIOS/GEMDOS/VDI/AES/Line-A/Line-F opcode breakpoint support
  - "aes", "vdi" and "gemdos" subcommands for "info".  Without arguments
    they will output information about corresponding OS part state,
    with (a non-zero) argument, opcode/call name table is shown
  - ":info" flag to breakpoints that will call the locked "info/lock"
    subcommand without entering the debugger / stopping emulation
  - "file" subcommand to "lock" that execs debugger commands from given
    file when debugger is entered (or ":info" breakpoint is hit)
  - DSP and CPU code profiling functionality.  Provides statistics about
    profiled code (executed code address ranges, max and total counts
    and cycles), lists addresses/instructions taking most cyles and if
    symbols are loaded, what were the most used symbol addresses.
  - Profiling information is also shown in disassembly output

Other changes:
- hmsa tool can create empty disk images in addition to converting
  disks between ST & MSA formats