@@ -417,10 +417,9 @@ for border removal).</p>
     <tr>
       <td>Delta Force:
       <a href="http://pouet.net/prod.php?which=11806">Punish Your Machine</a></td>
-      <td class="minor">1.0</td>
+      <td>devel</td>
       <td>Sync-scroll, overscan... ST Connexion's screen features 4 pixels hardware scrolling on STF.
-          "Best Part Of The Creation" doesn't look correct due to missing spec512
-          mode in med res</td>
+          "Best Part Of The Creation" uses spec512 mode in med res</td>
     </tr>
     <tr>
       <td>Delta Force:
@@ -438,9 +437,8 @@ for border removal).</p>
     <tr>
       <td>Diamond Design:
       <a href="http://pouet.net/prod.php?which=3241">Brace</a></td>
-      <td class=minor>1.4</td>
-      <td>Flickering raster line in the mixed low/med res horizontal scrolltext, due
-          to missing spec512 mode in med res</td>
+      <td>devel</td>
+      <td>Use spec512 mode in med res in the mixed low/med res horizontal scrolltext</td>
     </tr>
     <tr>
       <td>Dune:
@@ -1350,10 +1348,9 @@ are just STE enhanced.  These are marked with '*'.</p>
     </tr>
     <tr>
       <td>Paradox:
-      <a href="http://pouet.net/prod.php?which=15053">20 years Atari STE megademo</a></td>
+      <a href="http://pouet.net/prod.php?which=54205">20 years Atari STE megademo</a></td>
       <td class="minor">1.4</td>
-      <td>DHS screen is offset to right, sound is broken in Paradox
-          color zoomer screen</td>
+      <td>Sound is broken in Paradox color zoomer screen</td>
     </tr>
     <tr>
       <td>Paradox:
@@ -1374,8 +1371,8 @@ are just STE enhanced.  These are marked with '*'.</p>
     <tr>
       <td>Paradox:
       <a href="http://pouet.net/prod.php?which=12237">HighResMode</a></td>
-      <td class="major">1.1</td>
-      <td>Spec512 in med-rez is not (yet) supported by Hatari</td>
+      <td>devel</td>
+      <td>Use spec512 mode in med res</td>
     </tr>
     <tr>
       <td>Reservoir Gods:
